--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "splitwise",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:4000/",
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
